[project]
name = "implied-volatility-of-vix-option"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]
